<resources>
    <string name="app_name">Whispered 2 Voice</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Welcome to Whispered2Voice</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop And Convert</string>
    <string name="play_recording">Play Converted</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>
    <string name="dlcomplete">Response: Download complete</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="select_gender">Please select gender first</string>
    <string name="male_selected">Male selected, please record a whispered utterance</string>
    <string name="female_selected">Female selected, please record a whispered utterance</string>
    <string name="play_conv">Playing converted:</string>
    <string name="rec_stop">Recording Stopped</string>
    <string name="play_stop">Recording Play Stopped</string>
    <string name="rec_start">Recording Started</string>
</resources>
